// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Asset airplane 1`] = `
<div
  style={
    Object {
      "width": "215px",
    }
  }
>
  <div
    className="euiFlexItem"
  >
    <div
      className="euiPanel euiPanel--paddingSmall canvasAsset"
    >
      <div
        className="canvasAsset__thumb canvasCheckered"
      >
        <figure
          className="euiImage canvasAsset__img"
          style={
            Object {
              "backgroundImage": "url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA1Ni4zMSA1Ni4zMSI+PGRlZnM+PHN0eWxlPi5jbHMtMXtmaWxsOiNmZmY7c3Ryb2tlOiMwMDc4YTA7c3Ryb2tlLW1pdGVybGltaXQ6MTA7c3Ryb2tlLXdpZHRoOjJweDt9PC9zdHlsZT48L2RlZnM+PHRpdGxlPlBsYW5lIEljb248L3RpdGxlPjxnIGlkPSJMYXllcl8yIiBkYXRhLW5hbWU9IkxheWVyIDIiPjxnIGlkPSJMYXllcl8xLTIiIGRhdGEtbmFtZT0iTGF5ZXIgMSI+PHBhdGggY2xhc3M9ImNscy0xIiBkPSJNNDkuNTEsNDguOTMsNDEuMjYsMjIuNTIsNTMuNzYsMTBhNS4yOSw1LjI5LDAsMCwwLTcuNDgtNy40N2wtMTIuNSwxMi41TDcuMzgsNi43OUEuNy43LDAsMCwwLDYuNjksN0wxLjIsMTIuNDVhLjcuNywwLDAsMCwwLDFMMTkuODUsMjlsLTcuMjQsNy4yNC03Ljc0LS42YS43MS43MSwwLDAsMC0uNTMuMkwxLjIxLDM5YS42Ny42NywwLDAsMCwuMDgsMUw5LjQ1LDQ2bC4wNywwYy4xMS4xMy4yMi4yNi4zNC4zOHMuMjUuMjMuMzguMzRhLjM2LjM2LDAsMCwwLDAsLjA3TDE2LjMzLDU1YS42OC42OCwwLDAsMCwxLC4wN0wyMC40OSw1MmEuNjcuNjcsMCwwLDAsLjE5LS41NGwtLjU5LTcuNzQsNy4yNC03LjI0TDQyLjg1LDU1LjA2YS42OC42OCwwLDAsMCwxLDBsNS41LTUuNUEuNjYuNjYsMCwwLDAsNDkuNTEsNDguOTNaIi8+PC9nPjwvZz48L3N2Zz4=)",
            }
          }
        >
          <img
            alt="Asset thumbnail"
            className="euiImage__img"
            src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA1Ni4zMSA1Ni4zMSI+PGRlZnM+PHN0eWxlPi5jbHMtMXtmaWxsOiNmZmY7c3Ryb2tlOiMwMDc4YTA7c3Ryb2tlLW1pdGVybGltaXQ6MTA7c3Ryb2tlLXdpZHRoOjJweDt9PC9zdHlsZT48L2RlZnM+PHRpdGxlPlBsYW5lIEljb248L3RpdGxlPjxnIGlkPSJMYXllcl8yIiBkYXRhLW5hbWU9IkxheWVyIDIiPjxnIGlkPSJMYXllcl8xLTIiIGRhdGEtbmFtZT0iTGF5ZXIgMSI+PHBhdGggY2xhc3M9ImNscy0xIiBkPSJNNDkuNTEsNDguOTMsNDEuMjYsMjIuNTIsNTMuNzYsMTBhNS4yOSw1LjI5LDAsMCwwLTcuNDgtNy40N2wtMTIuNSwxMi41TDcuMzgsNi43OUEuNy43LDAsMCwwLDYuNjksN0wxLjIsMTIuNDVhLjcuNywwLDAsMCwwLDFMMTkuODUsMjlsLTcuMjQsNy4yNC03Ljc0LS42YS43MS43MSwwLDAsMC0uNTMuMkwxLjIxLDM5YS42Ny42NywwLDAsMCwuMDgsMUw5LjQ1LDQ2bC4wNywwYy4xMS4xMy4yMi4yNi4zNC4zOHMuMjUuMjMuMzguMzRhLjM2LjM2LDAsMCwwLDAsLjA3TDE2LjMzLDU1YS42OC42OCwwLDAsMCwxLC4wN0wyMC40OSw1MmEuNjcuNjcsMCwwLDAsLjE5LS41NGwtLjU5LTcuNzQsNy4yNC03LjI0TDQyLjg1LDU1LjA2YS42OC42OCwwLDAsMCwxLDBsNS41LTUuNUEuNjYuNjYsMCwwLDAsNDkuNTEsNDguOTNaIi8+PC9nPjwvZz48L3N2Zz4="
          />
        </figure>
      </div>
      <div
        className="euiSpacer euiSpacer--s"
      />
      <div
        className="euiText euiText--extraSmall eui-textBreakAll"
      >
        <p
          className="eui-textBreakAll"
        >
          <strong>
            airplane
          </strong>
          <br />
          <span
            className="euiTextColor euiTextColor--subdued"
          >
            <small>
              (
              1
               kb)
            </small>
          </span>
        </p>
      </div>
      <div
        className="euiSpacer euiSpacer--s"
      />
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero asset-create-image"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <button
              aria-describedby="generated-id"
              aria-label="Create image element"
              className="euiButtonIcon euiButtonIcon--primary"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="euiIcon euiIcon--medium euiButtonIcon__icon"
                focusable="false"
                height="16"
                style={null}
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 11V5H11V3.5H5V5H3.5v6H5v1.5h6V11h1.5zm1 0H15v4h-4v-1.5H5V15H1v-4h1.5V5H1V1h4v1.5h6V1h4v4h-1.5v6zM4 4V2H2v2h2zm8 0h2V2h-2v2zM2 14h2v-2H2v2zm10 0h2v-2h-2v2z"
                />
              </svg>
            </button>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero asset-download"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <div
              className="canvasDownload"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <button
                aria-label="Download"
                className="euiButtonIcon euiButtonIcon--primary"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="euiIcon euiIcon--medium euiButtonIcon__icon"
                  focusable="false"
                  height="16"
                  style={null}
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 11.692V3.556C7 3.249 7.224 3 7.5 3s.5.249.5.556v8.136l4.096-4.096a.5.5 0 0 1 .707.707l-4.242 4.243a1.494 1.494 0 0 1-.925.433.454.454 0 0 1-.272 0 1.494 1.494 0 0 1-.925-.433L2.197 8.303a.5.5 0 1 1 .707-.707L7 11.692z"
                  />
                </svg>
              </button>
            </div>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <div
              className="canvasClipboard"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <button
                aria-label="Copy id to clipboard"
                className="euiButtonIcon euiButtonIcon--primary"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="euiIcon euiIcon--medium euiButtonIcon__icon"
                  focusable="false"
                  height="16"
                  style={null}
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 2.729V2a1 1 0 0 1 1-1h2v1H1v12h4v1H1a1 1 0 0 1-1-1V2.729zM12 5V2a1 1 0 0 0-1-1H9v1h2v3h1zm-1 1h2v9H6V6h5V5H6a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1h-2v1z"
                  />
                  <path
                    d="M7 10h5V9H7zM7 8h5V7H7zM7 12h5v-1H7zM7 14h5v-1H7zM9 2V1a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v1h1V1h4v1h1zM3 3h6V2H3z"
                  />
                </svg>
              </button>
            </div>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <button
              aria-describedby="generated-id"
              aria-label="Delete"
              className="euiButtonIcon euiButtonIcon--danger"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="euiIcon euiIcon--medium euiButtonIcon__icon"
                focusable="false"
                height="16"
                style={null}
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              >
                <defs>
                  <path
                    d="M11 3h5v1H0V3h5V1a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2zm-7.056 8H7v1H4.1l.392 2.519c.042.269.254.458.493.458h6.03c.239 0 .451-.189.493-.458l1.498-9.576H14l-1.504 9.73c-.116.747-.74 1.304-1.481 1.304h-6.03c-.741 0-1.365-.557-1.481-1.304l-1.511-9.73H9V5.95H3.157L3.476 8H8v1H3.632l.312 2zM6 3h4V1H6v2z"
                    id="trash-a"
                  />
                </defs>
                <use
                  xlinkHref="#trash-a"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Asset marker 1`] = `
<div
  style={
    Object {
      "width": "215px",
    }
  }
>
  <div
    className="euiFlexItem"
  >
    <div
      className="euiPanel euiPanel--paddingSmall canvasAsset"
    >
      <div
        className="canvasAsset__thumb canvasCheckered"
      >
        <figure
          className="euiImage canvasAsset__img"
          style={
            Object {
              "backgroundImage": "url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzOC4zOSA1Ny41NyI+PGRlZnM+PHN0eWxlPi5jbHMtMXtmaWxsOiNmZmY7c3Ryb2tlOiMwMTliOGY7c3Ryb2tlLW1pdGVybGltaXQ6MTA7c3Ryb2tlLXdpZHRoOjJweDt9PC9zdHlsZT48L2RlZnM+PHRpdGxlPkxvY2F0aW9uIEljb248L3RpdGxlPjxnIGlkPSJMYXllcl8yIiBkYXRhLW5hbWU9IkxheWVyIDIiPjxnIGlkPSJMYXllcl8xLTIiIGRhdGEtbmFtZT0iTGF5ZXIgMSI+PHBhdGggY2xhc3M9ImNscy0xIiBkPSJNMTkuMTksMUExOC4xOSwxOC4xOSwwLDAsMCwyLjk0LDI3LjM2aDBhMTkuNTEsMTkuNTEsMCwwLDAsMSwxLjc4TDE5LjE5LDU1LjU3LDM0LjM4LDI5LjIxQTE4LjE5LDE4LjE5LDAsMCwwLDE5LjE5LDFabTAsMjMuMjlhNS41Myw1LjUzLDAsMSwxLDUuNTMtNS41M0E1LjUzLDUuNTMsMCwwLDEsMTkuMTksMjQuMjlaIi8+PC9nPjwvZz48L3N2Zz4=)",
            }
          }
        >
          <img
            alt="Asset thumbnail"
            className="euiImage__img"
            src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzOC4zOSA1Ny41NyI+PGRlZnM+PHN0eWxlPi5jbHMtMXtmaWxsOiNmZmY7c3Ryb2tlOiMwMTliOGY7c3Ryb2tlLW1pdGVybGltaXQ6MTA7c3Ryb2tlLXdpZHRoOjJweDt9PC9zdHlsZT48L2RlZnM+PHRpdGxlPkxvY2F0aW9uIEljb248L3RpdGxlPjxnIGlkPSJMYXllcl8yIiBkYXRhLW5hbWU9IkxheWVyIDIiPjxnIGlkPSJMYXllcl8xLTIiIGRhdGEtbmFtZT0iTGF5ZXIgMSI+PHBhdGggY2xhc3M9ImNscy0xIiBkPSJNMTkuMTksMUExOC4xOSwxOC4xOSwwLDAsMCwyLjk0LDI3LjM2aDBhMTkuNTEsMTkuNTEsMCwwLDAsMSwxLjc4TDE5LjE5LDU1LjU3LDM0LjM4LDI5LjIxQTE4LjE5LDE4LjE5LDAsMCwwLDE5LjE5LDFabTAsMjMuMjlhNS41Myw1LjUzLDAsMSwxLDUuNTMtNS41M0E1LjUzLDUuNTMsMCwwLDEsMTkuMTksMjQuMjlaIi8+PC9nPjwvZz48L3N2Zz4="
          />
        </figure>
      </div>
      <div
        className="euiSpacer euiSpacer--s"
      />
      <div
        className="euiText euiText--extraSmall eui-textBreakAll"
      >
        <p
          className="eui-textBreakAll"
        >
          <strong>
            marker
          </strong>
          <br />
          <span
            className="euiTextColor euiTextColor--subdued"
          >
            <small>
              (
              1
               kb)
            </small>
          </span>
        </p>
      </div>
      <div
        className="euiSpacer euiSpacer--s"
      />
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero asset-create-image"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <button
              aria-describedby="generated-id"
              aria-label="Create image element"
              className="euiButtonIcon euiButtonIcon--primary"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="euiIcon euiIcon--medium euiButtonIcon__icon"
                focusable="false"
                height="16"
                style={null}
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 11V5H11V3.5H5V5H3.5v6H5v1.5h6V11h1.5zm1 0H15v4h-4v-1.5H5V15H1v-4h1.5V5H1V1h4v1.5h6V1h4v4h-1.5v6zM4 4V2H2v2h2zm8 0h2V2h-2v2zM2 14h2v-2H2v2zm10 0h2v-2h-2v2z"
                />
              </svg>
            </button>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero asset-download"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <div
              className="canvasDownload"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <button
                aria-label="Download"
                className="euiButtonIcon euiButtonIcon--primary"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="euiIcon euiIcon--medium euiButtonIcon__icon"
                  focusable="false"
                  height="16"
                  style={null}
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 11.692V3.556C7 3.249 7.224 3 7.5 3s.5.249.5.556v8.136l4.096-4.096a.5.5 0 0 1 .707.707l-4.242 4.243a1.494 1.494 0 0 1-.925.433.454.454 0 0 1-.272 0 1.494 1.494 0 0 1-.925-.433L2.197 8.303a.5.5 0 1 1 .707-.707L7 11.692z"
                  />
                </svg>
              </button>
            </div>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <div
              className="canvasClipboard"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <button
                aria-label="Copy id to clipboard"
                className="euiButtonIcon euiButtonIcon--primary"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="euiIcon euiIcon--medium euiButtonIcon__icon"
                  focusable="false"
                  height="16"
                  style={null}
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 2.729V2a1 1 0 0 1 1-1h2v1H1v12h4v1H1a1 1 0 0 1-1-1V2.729zM12 5V2a1 1 0 0 0-1-1H9v1h2v3h1zm-1 1h2v9H6V6h5V5H6a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1h-2v1z"
                  />
                  <path
                    d="M7 10h5V9H7zM7 8h5V7H7zM7 12h5v-1H7zM7 14h5v-1H7zM9 2V1a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v1h1V1h4v1h1zM3 3h6V2H3z"
                  />
                </svg>
              </button>
            </div>
          </span>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            className="euiToolTipAnchor"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <button
              aria-describedby="generated-id"
              aria-label="Delete"
              className="euiButtonIcon euiButtonIcon--danger"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="euiIcon euiIcon--medium euiButtonIcon__icon"
                focusable="false"
                height="16"
                style={null}
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              >
                <defs>
                  <path
                    d="M11 3h5v1H0V3h5V1a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2zm-7.056 8H7v1H4.1l.392 2.519c.042.269.254.458.493.458h6.03c.239 0 .451-.189.493-.458l1.498-9.576H14l-1.504 9.73c-.116.747-.74 1.304-1.481 1.304h-6.03c-.741 0-1.365-.557-1.481-1.304l-1.511-9.73H9V5.95H3.157L3.476 8H8v1H3.632l.312 2zM6 3h4V1H6v2z"
                    id="trash-a"
                  />
                </defs>
                <use
                  xlinkHref="#trash-a"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
